--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,81 @@
+* {
+  padding: 0 px;
+  margin: 0 px;
+  font-family: cursive;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: rgb(138, 180, 208);
+  background-image: url('./fontpicture.jpg');
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.myheader {
+  background-color: rgb(91, 71, 146);
+}
+
+.topnav {
+  background-color: pink;
+  width: 90%;
+  height: 20%;
+  margin: auto;
+}
+
+img.logo {
+  float: left;
+  padding: 1%;
+  margin-bottom: 0%;
+  width: 10vw;
+  height: 10vh;
+  display: inline;
+  text-indent: -999 px;
+}
+
+.main-container {
+  background-color: rgb(248, 246, 246, 0.32);
+  display: flex;
+  justify-content: space-between;
+  padding: 1%;
+  width: 90%;
+  height: 60%;
+  margin: auto;
+}
+.mini-container {
+  box-sizing: border-box;
+  border-radius: 5%;
+  border: none;
+  width: 30%;
+}
+
+.mini-container-2 {
+  box-sizing: border-box;
+  /* border-radius: 5%; */
+  border: none;
+  flex-basis: 30%;
+}
+
+.mini-container-3 {
+  box-sizing: border-box;
+  border-radius: 5%;
+  border: none;
+  width: 30%;
+}
+
+h3 {
+  color: rgb(87, 76, 78);
+}
+
+.btn {
+  background-color: #04aa6d;
+  height: 6vh;
+  margin: 8% auto;
+  color: white;
+  display: block;
+  width: 20vw;
 }
