--- a/templates/automatically.html
+++ b/templates/automatically.html
@@ -15,18 +15,18 @@
         <a href="">Exit</a>
     </nav>
     <div class="main-container">
-        <li class="myList" style="background-color: rgb(115, 255, 0);">1</li>
-        <li class="myList" style="background-color: rgb(144, 144, 165);">2</li>
-        <li class="myList" style="background-color: rgb(0, 255, 115);">3</li>
-        <li class="myList" style="background-color: rgb(162, 0, 255);">4</li>
-        <li class="myList" style="background-color: rgb(91, 91, 228);">5</li>
-        <li class="myList" style="background-color: rgb(255, 0, 140);">6</li>
-        <li class="myList" style="background-color: rgb(138, 93, 129);">7</li>
-        <li class="myList" style="background-color: rgb(255, 53, 7);">8</li>
-        <li class="myList" style="background-color: #644f09;">9</li>
-        <li class="myList" style="background-color: rgb(0, 255, 255);">10</li>
-        <li class="myList" style="background-color: rgb(177, 192, 125);">11</li>
-        <li class="myList" style="background-color: rgb(217, 240, 65);">12</li>
+        <li class="myList" style="background-color: rgb(115, 255, 0);">User: {{ user }}</li>
+        <li class="myList" style="background-color: rgb(144, 144, 165);">Brand: {{ brand }}</li>
+        <li class="myList" style="background-color: rgb(0, 255, 115);">Model: {{ model }}</li>
+        <li class="myList" style="background-color: rgb(162, 0, 255);">Serial Number: {{ serialNumber }}</li>
+        <li class="myList" style="background-color: rgb(91, 91, 228);">RAM: {{ ram }}</li>
+        <li class="myList" style="background-color: rgb(255, 0, 140);">Operating System: {{ osys }}</li>
+        <li class="myList" style="background-color: rgb(138, 93, 129);">Windows Licence: {{ winlic }}</li>
+        <li class="myList" style="background-color: rgb(255, 53, 7);">MAC: {{ macaddress }}</li>
+        <li class="myList" style="background-color: #644f09;">AzureAdPrt: {{ azureAdPrt }}</li>
+        <li class="myList" style="background-color: rgb(0, 255, 255);">IsDeviceJoined: {{ isDeviceJoined: }}</li>
+        <li class="myList" style="background-color: rgb(177, 192, 125);">IsUserAzureAD: {{ isUserAzureAD: }}</li>
+        <li class="myList" style="background-color: rgb(217, 240, 65);">AzureAdJoined: {{ azureAdJoined: }}</li>
     </div>
 </body>
 </html>
