--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="">Automatically</a>
+        <a href="/">Home</a>
+        <a href="http://127.0.0.1:5000/automate">Automate</a>
         <a href="">Login</a>
         <a href="">Exit</a>
     </nav>
