--- a/static/main.css
+++ b/static/main.css
@@ -16,8 +16,8 @@ body {
   background-size: cover;
 }
 
-.main-container {
-  background-color: rgb(248, 246, 246, 0.32);
+.container {
+  /* background-color: rgb(248, 246, 246, 0.32);
   display: flex;
   flex-direction: row;
   padding: 1%;
@@ -26,7 +26,7 @@ body {
   margin: auto;
   justify-content: space-between;
   align-content: center;
-  border-radius: 0.8rem;
+  border-radius: 0.8rem; */
 }
 
 form {
@@ -62,7 +62,7 @@ nav {
   padding: 2%;
   text-align: center;
 }
-
+/* 
 [class*='mini-container'] {
   margin: 3%;
 }
@@ -89,7 +89,7 @@ nav {
   display: flex;
   flex-direction: column;
   flex-basis: 30%;
-}
+} */
 
 label {
   /* color: rgb(87, 76, 78); */
