--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <!-- jinja2 -->
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}"> -->
+    <!-- <title>{% block title %}{% endblock %} - My Webpage</title> -->
+    <!-- _______________________________________________________ -->
+
     <link rel="stylesheet" href="../static/main.css">
-    <title>Inventory</title>
+    <title>{{ title }}</title>
 </head>
+
 <body>
     <nav class="topnav">
         <a href="/">Home</a>
         <a href="http://127.0.0.1:5000/automate">Automate</a>
-        <a href="">Login</a>
-        <a href="">Exit</a>
+        <a href="http://127.0.0.1:5000/login">Login</a>
+        <a href="http://127.0.0.1:5000/exit">Exit</a>
     </nav>
+
     <div id="separator">
     <!-- <div class="container"> -->
         {% if message %}
@@ -21,53 +29,10 @@
         {% endif %}
     <!-- </div> -->
     </div>
-    <div class="main-container">
-        <form action="/submit" method="POST">
-            <div class="form-group">
-                <div class="mini-container">
-                    <label for="user">User</label>
-                    <input class="textInput" type="text" name="user" placeholder="User Name"/>
-
-                    <label for="brand">Brand</label>
-                    <input class="textInput" type="text" name="brand" placeholder="Brand"/>
-
-                    <label for="model">Model</label>
-                    <input class="textInput" type="text" name="model" placeholder="Model"/>
-
-                    <label for="sn">S/N</label>
-                    <input class="textInput" type="text" name="serialNumber" placeholder="Serial Number"/>
-                </div>
-                <div class="mini-container-2">
-                    <label for="ram">RAM</label>
-                    <input class="textInput" type="text" name="ram" placeholder="RAM size"/>
-
-                    <label for="os">OS</label>
-                    <input class="textInput" type="text" name="operatingSystem" placeholder="Operating System"/>
-
-                    <label for="licence">Licence</label>
-                    <input class="textInput" type="text" name="licence" placeholder="Windows Licence Yes/No"/>
-
-                    <label for="mac">MAC:</label>
-                    <input class="textInput" type="text" name="macAddress" placeholder="MAC address"/>
-
-                </div>
-                <div class="mini-container-3">
-                    <label for="azureadprt">AzureAdPrt:</label>
-                    <input class="textInput" type="text" name="azureAdPrt" placeholder="Yes/No"/>
-               
-                    <label for="isdevicejoined">IsDeviceJoined:</label>
-                    <input class="textInput" type="text" name="isDeviceJoined" placeholder="Yes/No"/>
-                
-                    <label for="isuserazuread">IsUserAzureAD:</label>
-                    <input class="textInput" type="text" name="isUserAzureAD" placeholder="Yes/No"/>
-
-                    <label for="azureadjoined">AzureAdJoined:</label>
-                    <input class="textInput" type="text" name="azureAdJoined" placeholder="Yes/No"/>
-                    <input type="submit" value="Submit" class="btn"/>
-                </div>
-            </div>               
-        </form>
-
+    <div class="container">
+        {% block container %}{% endblock container %}
+        {% block register %}{% endblock register %}
+        {% block automate %}{% endblock %}
     </div>
 </body>
 </html>
